<resources>
    <string name="app_name">ArcgisTest</string>


    <!-- basemap menu items -->
    <string name="StreetMapMenu">Streets</string>
    <string name="TopoMenu">Topographic</string>
    <string name="GrayMenu">Gray</string>
    <string name="OceanMenu">Oceans</string>



    <string name="featureServiceURL">http://services.arcgis.com/P3ePLMYs2RVChkJx/arcgis/rest/services/World_Cities/FeatureServer/0</string>
    <string name="query_us">COUNTRY = US</string>
    <string name="query_ca">COUNTRY = CANADA</string>
    <string name="query_fr">COUNTRY = FRANCE</string>
    <string name="query_au">COUNTRY = AUSTRALIA</string>
    <string name="query_br">COUNTRY = BRAZIL</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Place Search</string>
    <string name="search_hint">Search address or place</string>
    <string name="menu_search">Search</string>

    <string name="address_search">Searching for Address</string>
    <string name="addressSearchFailed">Address search failed</string>
    <string name="noResultsFound">No results found</string>

    <string name="tileServiceURL">http://sampleserver6.arcgisonline.com/arcgis/rest/services/World_Street_Map/MapServer</string>
    <string name="offline_dir">/ArcGIS/samples/tiledcache/</string>
    <!-- action bar menu items -->
    <string name="selectlevel">Select Levels</string>
    <string name="download">Download</string>
    <string name="switch_map">Switch Maps</string>
    <string name="load_online_layer">LoadOnlineLayer</string>

</resources>
